added some new skripts also fixed some stuff in old ones